--- a/package.json
+++ b/package.json
@@ -44,7 +44,8 @@
     "typescript": "^4.9.3",
     "vite": "^4.0.0",
     "vite-plugin-eslint": "^1.8.1",
-    "vite-plugin-stylelint": "^4.1.6"
+    "vite-plugin-stylelint": "^4.1.6",
+    "vite-plugin-svgr": "^2.4.0"
   },
   "husky": {
     "pre-commit": "npm run lint"
